--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sean R. Richardson | RE & Exploit Dev Blog</title>
+  <title>Sean R. Richardson | RE, VR, & Exploit Dev Blog</title>
   <style>
     body {
       font-family: Arial, sans-serif;
